# tradealgo

./: .gitignore  .pre-commit-config.yaml  DAILY_RUN.txt  ENGINE_CAPABILITIES.txt  INSTRUCTIONS.txt  LEGAL_NOTES_AU_US.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt  shared_conversation.html
.githooks/: pre-commit
docs/: polygon_api.md
engine/: __init__.py  config.daily.D.yaml  config.example.daily.yaml  config.example.yaml  config.intraday.example.yaml  config.research.yaml  main_backtest.py  main_live.py  settings.toml
scripts/: README.md  autopilot.ps1  backtest.ps1  build-earnings-map.ps1  build-intraday-from-watchlist.ps1  build-swing-dataset.ps1  check-ready.ps1  daily-build.ps1  daily-local.ps1  daily-run.ps1  daily-summary.ps1  daily-train.ps1  daily.ps1  full-automation.ps1  heartbeat.ps1  load-env.ps1  nightly-run.ps1  overnight.ps1  paper-trade.ps1  pre-market.ps1  rebuild-polygon.ps1  register-swing-dataset-task.ps1  register-walkforward-task.ps1  register-weekly-analytics-task.ps1  replay-grid.ps1  replay-sweep.ps1  run-at-times.ps1  run-entry.ps1  run-trade-alert.ps1  run-weekly-analytics.ps1  set-storage-root.ps1  start-entry.ps1  start-intraday.ps1  start-overnight.ps1  start-rt-alert.ps1  start-style.ps1  status.ps1  stop-entry.ps1  stop-rt-alert.ps1  summary.ps1  (+12 more)
tests/: conftest.py  test_backtest_smoke.py  test_baseline_and_specialists.py  test_calib_utils.py  test_cv_and_calibration.py  test_entry_loop_basic.py  test_intraday_specialists.py  test_monitor_hysteresis.py  test_spec_gaprev.py  test_spec_news_window.py
ui/: app.py
(+123 files in other folders)
