[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-engine"
version = "0.0.0"
description = "Research + execution scaffold for a ML-driven trading engine"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scikit-learn>=1.2",
    "requests>=2.31",
    "tqdm>=4.65",
    "pyyaml>=6.0",
    "pandas_market_calendars>=4.4",
    "pyarrow>=12.0",
    "torch",
    "transformers>=4.40",
    "datasets>=2.18",
    "evaluate>=0.4",
]

[tool.setuptools]
packages = ["engine"]
